--- a/_posts/2020-06-07-这是一个礼物.md
+++ b/_posts/2020-06-07-这是一个礼物.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      祝张糖糖小朋友生日快乐~~~
+title:      祝张糖糖小朋友生日快乐~~
 subtitle:   HappyBirthday
 date:       2020-06-07
 author:     xuesong
-header-img: img/post-bg-cook.jpg
+header-img: img/xuesong/home.jpg
 catalog: true
 tags:
     - 06/07
 ---
 
-## 小小心意
+## 小小心意 希望喜欢 0.0
