--- a/_posts/2020-06-07-这是一个礼物.md
+++ b/_posts/2020-06-07-这是一个礼物.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      祝张糖糖小朋友生日快乐~~
-subtitle:   HappyBirthday
+title:      祝张糖糖小朋友生日快乐~~~
+subtitle:   平平无奇的宝藏女孩罢辽~
 date:       2020-06-07
 author:     xuesong
 header-img: img/xuesong/home.jpg
